[OJ_A3_FE_15] Fixed scrollbar, input change, successModal

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,12 @@
   button:focus-visible {
     @apply ring-2 ring-black ring-offset-1;
   }
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply bg-secondary/50 rounded-full;
+  }
 }
 
 @font-face {
